--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 <body>
     <h1>Bem-vindo!</h1>
+    <h2>Minha primeira página HTML</h2>
     <p>Esta é uma página HTML simples.</p>
     <button onclick="alert('Olá!')">Clique aqui</button>
 </body>
